gitops-application-monitoring/alumnos/networkpolicies/networkpolicy-monitoring-zeno-026.yaml
# Allow all traffic within the same namespace 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: monitoring-zeno-026
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}   # solo pods dentro del mismo namespace
  egress:
  - to:
    - podSelector: {}
